--- a/pages/exam/css/style.css
+++ b/pages/exam/css/style.css
@@ -1,83 +1,164 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  background-color: #73798c;
 }
 
 .wrapper {
-    width: 780px;
-height: 340px;
-margin: 50px auto;
-padding: 40px;
-border: 1px solid #E2E2E9;
+  max-width: 780px;
+  min-height: 340px;
+  margin: 50px auto;
+  padding: 40px;
+  border: 1px solid #e2e2e9;
+  background-color: #fff;
 }
 
 .order-num {
-    font-family: 'Nunito';
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-color: #73798C;
-margin: 0 0 5px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #73798c;
+  margin: 0 0 5px;
 }
 
 .accept-wrapper {
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Nunito';
-    font-style: normal;
-font-weight: 600;
-font-size: 36px;
-line-height: 49px;
-color: #000;
-margin: 0 0 31px;
+  display: flex;
+  justify-content: space-between;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 49px;
+  margin: 0 0 31px;
 }
 
 .line {
-    height: 4px;
-    background: #E2E2E9;
-border-radius: 2px;
-margin: 0 0 9px;
+  height: 4px;
+  background: #e2e2e9;
+  border-radius: 2px;
+  margin: 0 0 9px;
 }
 
 .address {
-    font-family: 'Nunito';
-    font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 22px;
-margin: 0 0 70px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  margin: 0 0 70px;
 }
 
 .button-wrapper {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .button {
-    display: block;
-    height: 48px;
-    cursor: pointer;
-    border-radius: 25px;
-font-family: 'Nunito', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 22px;
-text-align: center;
-border: none;
+  display: block;
+  height: 48px;
+  cursor: pointer;
+  border-radius: 25px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  border: none;
 }
 
 .button-deny {
-    width: 160px;
-    background-color: #FFF0E6;
-    color: #D15700;
+  width: 160px;
+  background-color: #fff0e6;
+  color: #d15700;
 }
 
+.button-deny:hover {
+  background-color: rgba(249, 105, 0, 0.3);
+  transition: 0.3s;
+}
 
 .button-back {
-    width: 190px;
-    background-color: #F96900;
-    color: #fff;
+  width: 190px;
+  background-color: #f96900;
+  color: #fff;
 }
 
+.button-back:hover {
+  opacity: 0.7;
+  transition: 0.3s;
+}
+
+.media__header {
+  display: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.media__text {
+  display: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+@media (max-width: 575px) {
+  .wrapper {
+    padding: 16px;
+  }
+
+  .order-num {
+    font-size: 12px;
+    line-height: 14px;
+    color: #72788b;
+    margin: 0 0 4px;
+  }
+
+  .accept-wrapper {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 33px;
+    margin: 0 0 12px;
+  }
+  .accept-min {
+    display: none;
+  }
+
+  .line {
+    height: auto;
+    padding: 18px 21px 18px 20px;
+    background: #f3f3f7;
+    border-radius: 10px;
+    margin: 0 0 70px;
+  }
+
+  .media__header {
+    display: block;
+    margin: 0 0 4px;
+  }
+
+  .media__text {
+    display: block;
+    max-width: 247px;
+  }
+
+  .address {
+    display: none;
+  }
+
+  .button-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .button {
+    width: 288px;
+  }
+
+  .button-deny {
+    margin: 0 0 10px;
+  }
+}
