--- a/css/config.css
+++ b/css/config.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Nunito", serif;
+  font-style: normal;
   font-size: 14px;
   font-weight: 400;
 }
@@ -42,4 +43,11 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+@media (max-width: 1100px) {
+  .container {
+    max-width: 90%;
+    margin: 0 auto;
+  }
 }
