--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,6 @@
   grid-template-areas:
     "column1 column2 column3 column4 contacts"
     "row-info1 row-info1 row-info2 row-info2 row-info2";
-  /* "footer-raw1 footer-raw1 footer-raw1 footer-raw1 footer-raw1"; */
 }
 
 .grid__dodoinfo {
@@ -55,6 +54,11 @@
 
 .contacts__image {
   display: block;
+}
+
+.contacts__call {
+  display: flex;
+  flex-direction: column;
 }
 
 .contacts__phone {
@@ -138,10 +142,8 @@
 
 .grid__logo {
   display: flex;
-  /* grid-area: footer-raw1; */
   justify-content: flex-start;
   align-items: center;
-  /* padding: 46px 0 0 0; */
 }
 
 .logo__img {
@@ -160,11 +162,9 @@
 }
 
 .grid__extrainfo {
-  /* grid-area: footer-raw1; */
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding: 46px 0 0; */
   gap: 20px;
 }
 
@@ -183,9 +183,7 @@
 }
 
 .grid__social {
-  /* grid-area: footer-raw1; */
   align-items: center;
-  /* padding: 46px 0 0; */
   display: flex;
   justify-content: flex-end;
 }
@@ -210,7 +208,6 @@
   font-size: 18px;
   line-height: 26px;
   color: #fff;
-  /* margin-bottom: 10px; */
 }
 
 .items__list {
@@ -231,4 +228,81 @@
 
 .items__list_width {
   max-width: 100px;
+}
+
+@media (max-width: 1100px) {
+  .grid__wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 213px 203px 112px;
+    grid-template-areas:
+      "column1 column2 column3 column4"
+      ".  .  contacts contacts"
+      "row-info1 row-info1 row-info2 row-info2";
+  }
+
+  .grid__contacts {
+    align-items: flex-end;
+  }
+
+  .contacts__call {
+    display: flex;
+  }
+
+  .grid__facts {
+    padding-left: 0;
+  }
+
+  .grid__extrainfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+  }
+
+  .footer__contacts {
+    display: flex;
+    margin: 20px 0 0;
+  }
+
+  @media (max-width: 768px) {
+    .grid__wrapper {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 190px 190px 100px 112px;
+      grid-template-areas:
+        "column1 column2 "
+        "column3 column4"
+        "contacts contacts"
+        "row-info1 row-info2";
+    }
+
+    .grid__contacts {
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    .contacts__call {
+      display: none;
+    }
+
+    .footer__contacts {
+      flex-direction: column-reverse;
+      /* align-items: flex-start; */
+    }
+
+    .grid__social {
+      margin-bottom: 20px;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+
+    .grid__extrainfo {
+      flex-direction: row;
+      justify-content: start;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+  }
 }
